<resources>
    <string name="app_name">New-Community-frontend-Android</string>
    <string name="app_login_password">密码</string>
    <string name="app_login_yzm">验证码</string>
    <string name="app_login_password_userphone">请输入手机号码</string>
    <string name="app_login_password_userpwd">请输入密码</string>
    <string name="app_login">登陆</string>
    <string name="app_login_findpwd">找回密码</string>
    <string name="app_other_logins">其他登陆</string>
    <string name="app_login_yzm_agreement">注册小七当家代表您已同意</string>
    <string name="app_login_yzm_agree"><u>小七当家用户服务协议</u></string>
    <string name="app_login_yzm_unReg">未注册的手机，验证后自动注册并登陆</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_set_password">SetPasswordActivity</string>
</resources>
