<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400px"
    android:orientation="vertical"
    tools:context="com.xhwl.xhwlapp.com.xhwl.xhwlownerapp.activity.view.LoginView.LoginFragment.YzmFragment">
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="92px"
            android:background="@drawable/login_phone" />
        <com.xhwl.xhwlownerapp.UIUtils.ClearEditText
            android:id="@+id/login_yzm_userphone"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_marginLeft="17dp"
            android:layout_gravity="center"
            android:hint="@string/app_login_password_userphone"
            android:textSize="30px"
            android:background="@null"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px"
        android:background="@drawable/login_line"/>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_login_yzm_unReg"
            android:textSize="30px"
            android:layout_gravity="center"
            android:textColor="@color/login_unregistered"
            android:gravity="center"/>
    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/yzm_login_btn"
            android:layout_width="match_parent"
            android:layout_height="75px"
            android:layout_marginRight="60px"
            android:layout_marginLeft="60px"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30px"
            android:textColor="@color/white"
            android:text="@string/app_login"
            android:background="@drawable/introduce_btn_bg"/>
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>
