<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.xhwl.xhwlapp.com.xhwl.xhwlownerapp.activity.view.LoginView.LoginFragment.PasswordFragment">

   <com.zhy.autolayout.AutoLinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="30px"
       android:orientation="horizontal">

       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginLeft="92px"
           android:background="@drawable/login_phone" />
       <com.xhwl.xhwlownerapp.UIUtils.ClearEditText
           android:id="@+id/login_password_userphone"
           android:layout_width="match_parent"
           android:layout_height="100px"
           android:layout_marginLeft="17dp"
           android:layout_gravity="center"
           android:hint="@string/app_login_password_userphone"
            android:textSize="30px"
           android:background="@null"/>
   </com.zhy.autolayout.AutoLinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px"
        android:background="@drawable/login_line"/>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="92px"
            android:background="@drawable/login_password" />

        <com.xhwl.xhwlownerapp.UIUtils.ClearEditText
            android:id="@+id/login_password_userpwd"
            android:layout_width="259dp"
            android:layout_height="100px"
            android:layout_gravity="center"
            android:layout_marginLeft="17dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/app_login_password_userpwd"
            android:password="true"
            android:textSize="30px" />

        <ImageView
            android:id="@+id/login_pass_no_see"
            android:layout_width="17dp"
            android:layout_height="40px"
            android:layout_gravity="center"
            android:layout_marginRight="60px"
            android:background="@drawable/pass_no_see" />
    </com.zhy.autolayout.AutoLinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px"
        android:background="@drawable/login_line"/>
    <TextView
        android:id="@+id/login_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_login_findpwd"
        android:textSize="30px"
        android:gravity="right"
        android:layout_gravity="right"
        android:layout_marginTop="30px"
        android:layout_marginBottom="30px"
        android:textColor="@color/login_yzm_1"
        android:layout_marginRight="60px"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_pwd_btn"
            android:layout_width="match_parent"
            android:layout_marginRight="60px"
            android:layout_marginLeft="60px"
            android:layout_height="75px"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30px"
            android:textColor="@color/white"
            android:text="@string/app_login"
            android:background="@drawable/introduce_btn_bg"/>
    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>
