<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="420px"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_logo_xq_bg"
            android:layout_centerInParent="true"
            />
        <ImageView
            android:layout_width="139px"
            android:layout_height="94px"
            android:background="@drawable/login_logo_xq"
            android:layout_centerInParent="true"
            />

    </com.zhy.autolayout.AutoRelativeLayout>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/login_yzm_0"
            android:text="@string/app_login_password"
            android:textSize="40px" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_login_yzm"
            android:textColor="@color/login_yzm_0"
            android:textSize="40px"
            android:gravity="center"
            android:id="@+id/login_yzm"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoFrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <android.support.v4.view.ViewPager
            android:id="@+id/login_viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />
    </com.zhy.autolayout.AutoFrameLayout>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="200px"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_other_logins"
            android:textSize="24px"
            android:gravity="center"
            android:textColor="@color/third_party"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/login_line"/>
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/login_wechat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/login_wechat"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="微信"
                    android:textSize="30px"
                    android:gravity="center"
                    />
            </com.zhy.autolayout.AutoLinearLayout>
            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/login_qq"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/login_qq"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="QQ"
                    android:textSize="30px"
                    android:gravity="center"
                    />
            </com.zhy.autolayout.AutoLinearLayout>
            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/login_weibo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/login_weibo"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="微博"
                    android:textSize="30px"
                    android:gravity="center"
                    />
            </com.zhy.autolayout.AutoLinearLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/login_agreement_autoLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:textSize="25px"
            android:text="@string/app_login_yzm_agreement"/>
        <TextView
            android:id="@+id/login_agreement_autoLink"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:textColor="@color/login_yzm_1"
            android:textSize="25px"
            android:text="@string/app_login_yzm_agree"/>
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>
